@startuml Core Architecture Class Diagram

skinparam classAttributeIconSize 0
skinparam classFontSize 11
skinparam packageFontSize 13
skinparam linetype ortho

title Open Ticket AI - Core Architecture Class Diagram

package "Pipeline Core" {
    abstract class Pipe {
        +config: PipeConfig
        +process(ctx: PipeContext): PipeContext
        +have_dependent_pipes_been_run(ctx): bool
        #{abstract} _process(ctx: PipeContext): PipeResult
    }

    class PipeContext {
        +pipes: dict[str, PipeResult]
        +params: dict
        +parent: PipeContext?
        +has_succeeded(pipe_id: str): bool
    }

    class PipeResult {
        +succeeded: bool
        +message: str
        +data: dict
    }
}

package "Configuration & DI" {
    abstract class Injectable {
        +config: InjectableConfig
        +__init__(config: InjectableConfig)
    }

    class InjectableConfig {
        +id: str
        +use: str
        +params: dict
        +injects: dict[str, str]
    }

    class Params {
        +{abstract} custom fields
    }

    class PipeFactory {
        +create_pipe(config: PipeConfig): Pipe
    }

    class TemplateRenderer {
        +render(obj, scope): Any
        #{abstract} _render(template_str, scope): Any
    }
}

package "Orchestration" {
    class Orchestrator {
        +process(ctx: PipeContext): PipeContext
        #{abstract} _process(ctx: PipeContext): PipeResult
    }

    class PipeRunner {
        -trigger_pipe: Pipe
        -execution_pipe: Pipe
        +process(ctx: PipeContext): PipeContext
        #{abstract} _process(ctx: PipeContext): PipeResult
    }

    class Trigger {
        <<Pipe subclass>>
        +process(ctx: PipeContext): PipeContext
        #{abstract} _process(ctx: PipeContext): PipeResult
    }
}

package "Ticket System Integration" {
    abstract class TicketSystemService {
        +update_ticket(id, updates): bool
        +find_tickets(criteria): list[UnifiedTicket]
        +find_first_ticket(criteria): UnifiedTicket?
        +add_note(id, note): bool
    }
}
' Core Pipeline Relationships
Pipe --> PipeContext : processes
PipeContext --> PipeResult : stores

' Configuration & DI Relationships
Pipe -up-|> Injectable
TicketSystemService -up-|> Injectable
Trigger -up-|> Pipe : extends
Orchestrator -up-|> Pipe : extends
PipeRunner -up-|> Pipe : extends
Injectable --> InjectableConfig : has
InjectableConfig ..> Params : loosely has
PipeFactory --> Pipe : creates
PipeFactory ..> TemplateRenderer : uses
TemplateRenderer --> Params : renders

' Orchestration Relationships
Orchestrator --> PipeRunner : manages (as child pipes)
PipeRunner --> Trigger : has


@enduml